--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -1,2 +1,7 @@
 // Use this file to define style overrides for @edx/paragon
 // This file is included after all Paragon styles, but should generally avoid using private mixins in Paragon.
+$primary: #ee8166;
+$primary-light: #d5d5cd;
+$text-color: #226471;
+$body-bg: #ebeae6;
+$modules-banner: #f4f4f2;
