--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -1,6 +1,6 @@
 // Use this file to define style overrides for @edx/paragon
 // This file is included after all Paragon styles, but should generally avoid using private mixins in Paragon.
 
-body, .window-wrap {
+body {
   background-color: #ebeae6 !important;
 }
